--- a/estilos.css
+++ b/estilos.css
@@ -35,6 +35,10 @@ html{
     width: 80%;
     margin: 10px auto;
 }
+.btn-form{
+    margin: 3px auto;
+    width: 100%;
+}
 .breadcumb1{
     padding: 1em;
 
