--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@ html{
     
 }
 .jumbotron{
-    background-image: url("https://placeimg.com/1500/1200/arch"); /* The image used */
+    background-image: url("https://images.wallpaperscraft.com/image/architecture_bw_building_129956_1024x768.jpg"); /* The image used */
     background-color: #cccccc; /* Used if the image is unavailable */
    /* height: 500px;  You must set a specified height */
     background-position: center; /* Center the image */
