--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
+
+@font-face {
+  font-family: "Poiret One";
+  src: url("../fonts/PoiretOne-Regular.ttf") format("truetype");
+}
 html {
   margin: 0;
   padding: 0;
@@ -66,4 +70,4 @@ html {
   background-color: #2c3e50;
 }
 
-/*# sourceMappingURL=estilos.css.map */
+/*# sourceMappingURL=styles.css.map */
